force-app/main/default/objects/Stripe_Payment__c/Stripe_Payment__c.object-meta.xml
<CustomObject>
    <description>Stores all payment transactions initiated via the Stripe payment gateway. Links to any source object via Source_Object__c and Source_Record_Id__c. Stores only Stripe ids and minimal customer data - never card data (Stripe.js tokenizes client-side).</description>
    <label>Stripe Payment</label>
    <nameField>
        <displayFormat>SP-PAY-{000000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>