force-app/main/default/objects/Stripe_Payment__c/fields/Checkout_Mode__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Mode__c</fullName>
    <label>Checkout Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HOSTED</fullName>
            </value>
            <value>
                <fullName>EMBEDDED</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
            <value>
                <fullName>LINK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>