force-app/main/default/objects/Stripe_Payment__c/fields/Checkout_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Session_Id__c</fullName>
    <externalId>true</externalId>
    <label>Checkout Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>