force-app/main/default/objects/Stripe_Payment__c/fields/Hosted_Url__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Url__c</fullName>
    <label>Hosted Checkout Url</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>