force-app/main/default/objects/Stripe_Payment__c/fields/Last_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_Type__c</fullName>
    <label>Last Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>