force-app/main/default/objects/Stripe_Payment__c/fields/Payment_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Intent_Id__c</fullName>
    <externalId>true</externalId>
    <label>Payment Intent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>