force-app/main/default/objects/Stripe_Payment__c/fields/Product_Info__c.field-meta.xml
<CustomField>
    <fullName>Product_Info__c</fullName>
    <label>Product Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>