force-app/main/default/objects/Stripe_Payment__c/fields/Receipt_Url__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Url__c</fullName>
    <label>Receipt Url</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>