force-app/main/default/objects/Stripe_Payment__c/fields/Refunded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refunded_Amount__c</fullName>
    <label>Refunded Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>