force-app/main/default/objects/Stripe_Payment__c/fields/Setup_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>Setup_Intent_Id__c</fullName>
    <label>Setup Intent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>