force-app/main/default/objects/Stripe_Payment__c/fields/Stripe_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Status__c</fullName>
    <label>Stripe Payment Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>