force-app/main/default/objects/Stripe_Payment__c/fields/Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Id__c</fullName>
    <label>Stripe Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>