force-app/main/default/objects/Stripe_Payment__c/fields/UDF10__c.field-meta.xml
<CustomField>
    <fullName>UDF10__c</fullName>
    <label>UDF10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>