force-app/main/default/objects/Stripe_Payment__c/fields/UDF1__c.field-meta.xml
<CustomField>
    <fullName>UDF1__c</fullName>
    <label>UDF1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>