force-app/main/default/objects/Stripe_Payment__c/fields/UDF2__c.field-meta.xml
<CustomField>
    <fullName>UDF2__c</fullName>
    <label>UDF2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>